--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   shared_preferences: ^2.2.2
   file_picker: ^8.0.0+1
   excel: ^4.0.3
+  firebase_database: ^10.4.0
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
