--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   excel: ^4.0.3
   firebase_database: ^10.4.0
   expandable: ^5.0.1
+  day_night_time_picker: ^1.3.0+1
+  flutter_datetime_picker_plus: ^2.1.0
+  intl: ^0.19.0
+  random_string: ^2.3.1
+  qr_flutter: ^4.1.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +85,7 @@ flutter:
   assets:
     - assets/admin.jpg
     - assets/search.svg
+    - assets/qrAnim.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
