--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   random_string: ^2.3.1
   qr_flutter: ^4.1.0
   lottie: ^2.7.0
+  dialogs: ^0.0.7
 
 dev_dependencies:
   flutter_test:
