--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   lottie: ^2.7.0
   dialogs: ^0.0.7
   flutter_barcode_scanner: ^2.0.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
