--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   dialogs: ^0.0.7
   flutter_barcode_scanner: ^2.0.0
   percent_indicator: ^4.2.3
+  pdf: ^3.10.8
+  permission_handler: ^11.0.1
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +90,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/admin.jpg
+    - assets/ifri.jpg
     - assets/search.svg
     - assets/qrAnim.json
     - assets/failed.json
