--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   universal_html: ^2.2.4
   loading_animation_widget: ^1.2.1
   package_info: ^2.0.0
+  http: ^1.2.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -115,6 +117,7 @@ flutter:
     - assets/qrAnim.json
     - assets/failed.json
     - assets/done.json
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
