--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   package_info: ^2.0.0
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
+  simple_barcode_scanner: ^0.0.8
 
 dev_dependencies:
   flutter_test:
