--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   simple_barcode_scanner: ^0.0.8
+  bottom_navy_bar: ^6.0.0
+  flutter_svg_provider: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -114,6 +116,8 @@ flutter:
   assets:
     - assets/admin.jpg
     - assets/ifri.jpg
+    - assets/easyattend.png
+    - assets/students.svg
     - assets/search.svg
     - assets/qrAnim.json
     - assets/failed.json
