--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   omni_datetime_picker: ^1.1.0
   intl_phone_field: ^3.2.0
 
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
