--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ flutter:
     - assets/upload.jpg
     - assets/chat.jpeg
     - assets/makeQuery.png
+    - assets/makeQuery.jpg
     - assets/coursImage.jpg
     - assets/scan.jpg
     - assets/studentlogo.png
